Fix some layout issues with the publication feature

--- a/web/themes/custom/union_marketing/scss/components/_publication.scss
+++ b/web/themes/custom/union_marketing/scss/components/_publication.scss
@@ -38,13 +38,12 @@
 }
 
 .publication-feature__meta {
-  display: flex;
   background: #efefef;
   margin-bottom: var(--cu-vr1);
 
   @include breakpoint(sm) {
+    display: flex;
     margin: 0;
-    order: 2;
     grid-row: 1;
     grid-column: 2;
     padding: var(--cu-vr1);
@@ -66,35 +65,40 @@
   }
 }
 
+.publication__feature {
+  .cu-heading {
+    --cu-current-heading-size: var(--cu-ms5);
+    --cu-current-link-color: #222;
+    margin-top: var(--cu-vr0);
+
+    a {
+      text-decoration: none;
+    }
+  }
+}
+
 @include breakpoint(sm) {
   .publication__feature {
     display: grid;
     position: relative;
-    gap: var(--cu-vr0) 0;
     grid-template-columns: 7fr 3fr;
     grid-template-rows: repeat(2, auto);
 
-    .field--field-featured-story,
-    .cu-card,
-    .cu-card div {
+    .cu-heading {
+      --cu-current-heading-size: var(--cu-ms8);
+    }
+  }
+
+  .publication-feature__image {
+    // Ignore Drupal field wrapper divs so that the object-fit below will work.
+    :not(img):not(video) {
       display: contents;
     }
 
     .cu-image {
       object-fit: cover;
+      width: 100%;
       height: 100%;
-      order: -1;
-      grid-row: 1;
-    }
-
-    div.cu-card__content {
-      display: grid;
-      grid-row: 2;
-      grid-column: 1;
-
-      .cu-heading {
-        --cu-current-heading-size: var(--cu-ms8);
-      }
     }
   }
 }
